# Steeview-wifi-densepose-rs

./: .gitignore  Cargo.toml  README.md  STATUS.md
crates/wifi-densepose-api/: Cargo.toml
crates/wifi-densepose-api/src/: auth.rs  lib.rs  state.rs  ws.rs
crates/wifi-densepose-api/src/middleware/: rate_limit.rs
crates/wifi-densepose-api/src/routes/: health.rs  info.rs  metrics.rs  mod.rs  pose.rs  sensing.rs  vitals.rs
crates/wifi-densepose-cli/: Cargo.toml
crates/wifi-densepose-cli/src/: main.rs
crates/wifi-densepose-config/: Cargo.toml
crates/wifi-densepose-config/src/: lib.rs
crates/wifi-densepose-core/: Cargo.toml
crates/wifi-densepose-core/src/: error.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/wifi-densepose-db/: Cargo.toml
crates/wifi-densepose-db/src/: lib.rs
crates/wifi-densepose-hardware/: Cargo.toml
crates/wifi-densepose-hardware/src/: lib.rs  simulated.rs  udp.rs
crates/wifi-densepose-mat/: Cargo.toml
crates/wifi-densepose-mat/src/: lib.rs
crates/wifi-densepose-nn/: Cargo.toml
crates/wifi-densepose-nn/src/: lib.rs
crates/wifi-densepose-signal/: Cargo.toml
crates/wifi-densepose-signal/benches/: signal_bench.rs
crates/wifi-densepose-signal/src/: bvp.rs  csi_processor.rs  features.rs  fresnel.rs  hampel.rs  lib.rs  motion.rs  phase_sanitizer.rs  spectrogram.rs
crates/wifi-densepose-wasm/: Cargo.toml
crates/wifi-densepose-wasm/src/: lib.rs
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
esp32-firmware/: platformio.ini
esp32-firmware/rx/: main.cpp
esp32-firmware/src/rx/: main.cpp
esp32-firmware/tx/: main.cpp
ui/: Dockerfile  viz.html
