[workspace]
resolver = "2"
members = [
    "crates/wifi-densepose-core",
    "crates/wifi-densepose-signal",
    "crates/wifi-densepose-config",
    "crates/wifi-densepose-hardware",
    "crates/wifi-densepose-nn",
    "crates/wifi-densepose-api",
    "crates/wifi-densepose-db",
    "crates/wifi-densepose-mat",
    "crates/wifi-densepose-wasm",
    "crates/wifi-densepose-cli",
]

[workspace.package]
version     = "0.3.0"
edition     = "2021"
authors     = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ruvnet/RuView"
keywords    = ["wifi", "densepose", "csi", "pose-estimation", "rust"]
categories  = ["science", "computer-vision"]

# ── Shared dependencies ──────────────────────────────────────────────────────

[workspace.dependencies]
# Core utilities
thiserror   = "1.0"
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
tokio       = { version = "1.35", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Signal processing (pure-Rust, no system BLAS required)
ndarray     = { version = "0.15", features = ["serde"] }
rustfft     = "6.1"
num-complex = "0.4"
num-traits  = "0.2"

# Web framework
axum        = { version = "0.7", features = ["ws", "macros"] }
tower       = { version = "0.4", features = ["full"] }
tower-http  = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header"] }
hyper       = { version = "1.1", features = ["full"] }

# Auth & security
jsonwebtoken = "9.2"
subtle       = "2.5"    # constant-time comparison
governor     = "0.6"    # rate limiting

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json", "macros"] }

# Configuration
config    = "0.14"
dotenvy   = "0.15"

# WASM
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
getrandom            = { version = "0.2", features = ["js"] }

# Neural network (pure Rust — no libtorch required)
candle-core = { version = "0.4", default-features = false }

# Misc
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1.6", features = ["v4", "serde"] }
bytes       = "1.5"
futures     = "0.3"
sha2        = "0.10"
petgraph    = "0.6"
walkdir     = "2.4"
csv         = "1.3"
indicatif   = "0.17"
rayon       = "1.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing / benchmarks
criterion   = { version = "0.5", features = ["html_reports"] }
proptest    = "1.4"
mockall     = "0.12"
tempfile    = "3.9"

# Internal crates
wifi-densepose-core     = { version = "0.3.0", path = "crates/wifi-densepose-core" }
wifi-densepose-signal   = { version = "0.3.0", path = "crates/wifi-densepose-signal" }
wifi-densepose-config   = { version = "0.3.0", path = "crates/wifi-densepose-config" }
wifi-densepose-hardware = { version = "0.3.0", path = "crates/wifi-densepose-hardware" }
wifi-densepose-nn       = { version = "0.3.0", path = "crates/wifi-densepose-nn" }
wifi-densepose-api      = { version = "0.3.0", path = "crates/wifi-densepose-api" }
wifi-densepose-db       = { version = "0.3.0", path = "crates/wifi-densepose-db" }
wifi-densepose-mat      = { version = "0.3.0", path = "crates/wifi-densepose-mat" }

# ── Build profiles ───────────────────────────────────────────────────────────

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
opt-level     = 3

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = false

[profile.bench]
inherits = "release"
debug    = true
