[package]
name        = "wifi-densepose-config"
description = "Configuration loading (env vars, YAML, TOML) for WiFi DensePose"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
wifi-densepose-core = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_yaml = { workspace = true }
config    = { workspace = true }
dotenvy   = { workspace = true }
tracing   = { workspace = true }
