[package]
name        = "wifi-densepose-db"
description = "Database layer: SQLite (dev) / PostgreSQL (prod) via SQLx"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
wifi-densepose-core = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tokio     = { workspace = true }
sqlx      = { workspace = true }
chrono    = { workspace = true }
uuid      = { workspace = true }
tracing   = { workspace = true }
