[package]
name        = "wifi-densepose-hardware"
description = "Hardware adapters: ESP32 UDP, PCAP replay, simulated CSI"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
wifi-densepose-core   = { workspace = true }
wifi-densepose-signal = { workspace = true }
thiserror             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
bytes                 = { workspace = true }
