[package]
name        = "wifi-densepose-wasm"
description = "WebAssembly bindings for browser-side CSI signal processing"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wifi-densepose-core   = { workspace = true }
wifi-densepose-signal = { workspace = true }
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys               = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
getrandom            = { workspace = true }
